--- a/rag_vs_fine_tuning.ipynb
+++ b/rag_vs_fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6FP+XMtktulnqTLc6A9r5",
+      "authorship_tag": "ABX9TyOUpsCanoefFpblm3c8V8vh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,9 @@
         "id": "Axa9tQZ8Lpdp"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print('Helo')"
+      ]
     }
   ]
 }
