--- a/rag_vs_fine_tuning.ipynb
+++ b/rag_vs_fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUpsCanoefFpblm3c8V8vh",
+      "authorship_tag": "ABX9TyPNIbpTYAmC5Kn4Q+98AaLR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,17 @@
       "source": [
         "print('Helo')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('World')"
+      ],
+      "metadata": {
+        "id": "uyNHsxD_MxLU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
