--- a/1_Introduction to Python (Variables and Lists).ipynb
+++ b/1_Introduction to Python (Variables and Lists).ipynb
@@ -61,13 +61,13 @@
       ],
       "metadata": {
         "id": "r1BRxdYojCiV",
-        "outputId": "7be83668-8bdc-49be-c123-59b0e7940aa8",
+        "outputId": "8edc47ec-2a93-440a-abe6-509a489e5d36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 1
         }
       ]
     },
@@ -100,13 +100,13 @@
       ],
       "metadata": {
         "id": "OoBhqnTHjqGf",
-        "outputId": "c62e2e6e-6fb3-4271-e0e2-a90cea0441a6",
+        "outputId": "758dc076-8a1c-40f6-a72d-a2cbcfe47eed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 2
         }
       ]
     },
@@ -134,30 +134,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5fQ2KUk_PItu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "kUhRtdx_PI5z"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [
         "list(range(0,91,9))"
       ],
       "metadata": {
-        "id": "8I2q0v-SjtvS"
+        "id": "5fQ2KUk_PItu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5a885e6-108d-4c9e-ec0e-78196522317a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -174,10 +173,25 @@
         "len(list(range(2,10001,2)))"
       ],
       "metadata": {
-        "id": "-fFJNVCGjyJ8"
+        "id": "-fFJNVCGjyJ8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e3901287-ae99-401a-f987-861ccb6ccfad"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -197,10 +211,25 @@
         "week[0:5]"
       ],
       "metadata": {
-        "id": "jPNTptXPksy1"
+        "id": "jPNTptXPksy1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c83925a-2ecf-40ad-85dd-211c2e4933d0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['monday', 'tuesday', 'wednesday', 'thursday', 'friday']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -208,10 +237,25 @@
         "week[5:]"
       ],
       "metadata": {
-        "id": "KG6r8t1UkrMa"
+        "id": "KG6r8t1UkrMa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68d2abc6-b9df-47c9-cbb4-30be07b3356d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['saturday', 'sunday']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -228,10 +272,25 @@
         "week[-2:]"
       ],
       "metadata": {
-        "id": "HOetQKARj93Q"
+        "id": "HOetQKARj93Q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "efbe69f7-f363-40f1-8664-4e42c3e46852"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['saturday', 'sunday']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -239,10 +298,25 @@
         "week[-7:-2]"
       ],
       "metadata": {
-        "id": "6n0FPkvIkjRC"
+        "id": "6n0FPkvIkjRC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "678dfad9-1912-467b-a08a-5317d29701b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['monday', 'tuesday', 'wednesday', 'thursday', 'friday']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -259,21 +333,59 @@
         "week[6]\n"
       ],
       "metadata": {
-        "id": "Gg4DwAGCkHWM"
+        "id": "Gg4DwAGCkHWM",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1b4f1536-de0a-45e5-89da-9a2623e719a9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'sunday'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "week[6]\n"
+        "week[-1]\n"
       ],
       "metadata": {
-        "id": "nmOieDVlkfoO"
+        "id": "nmOieDVlkfoO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cfddb09b-ba7e-40c5-f311-56df84739254"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'sunday'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -638,7 +750,6 @@
         "even = []\n",
         "for i in odd:\n",
         "  even= even + [i+1]\n",
-        "\n",
         "even"
       ],
       "metadata": {
@@ -646,9 +757,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "38AjKI1-a69H",
-        "outputId": "72050ec0-a5ec-474b-efdd-15c1d891c0dc"
+        "outputId": "50764988-b739-459d-f14a-6e28ef6e27c0"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +769,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 13
         }
       ]
     },
@@ -670,7 +781,6 @@
         "even=[]\n",
         "for i in odd:\n",
         "  even.append(i+1)]\n",
-        "\n",
         "even"
       ],
       "metadata": {
